# cpp-coding-standards

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  meson.build
app/: CMakeLists.txt  meson.build
app/src/: main.cpp
lib/: CMakeLists.txt  meson.build
lib/include/: BaseClass.h  DerivedClass.h
lib/src/: BaseClass.cpp  DerivedClass.cpp
scripts/: clang-format.bat  clang-format.sh
